📝 Show virtual outer join in mapped (#93)
Co-authored-by: Alex Wolf <f.alexander.wolf@gmail.com>

--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -15,7 +15,7 @@
    "id": "6a0da8a5",
    "metadata": {},
    "source": [
-    "# Train an ML model on a collection"
+    "# Train a machine learning model on a collection"
    ]
   },
   {
@@ -23,9 +23,7 @@
    "id": "5a33a86e",
    "metadata": {},
    "source": [
-    "In the [previous tutorial](scrna3), we loaded an entire collection into memory to perform a simple analysis.\n",
-    "\n",
-    "Here, we'll iterate over the artifacts within the collection to train an ML model."
+    "Here, we iterate over the artifacts within a collection to train a machine learning model at scale."
    ]
   },
   {
@@ -52,31 +50,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe511a4d",
-   "metadata": {},
-   "source": [
-    "## Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "87a94c1a",
    "metadata": {},
    "source": [
-    "Let us get our collection:"
+    "Query our collection:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f232d65e",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "collection_v2 = ln.Collection.filter(\n",
+    "collection = ln.Collection.filter(\n",
     "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
     ").one()\n",
-    "collection_v2"
+    "collection.describe()"
    ]
   },
   {
@@ -84,27 +78,7 @@
    "id": "77d7dc38",
    "metadata": {},
    "source": [
-    "## PyTorch DataLoader"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7a6c0000",
-   "metadata": {},
-   "source": [
-    "If you need to train your model on a list of artifacts, you can use {meth}`~lamindb.Collection.mapped` with the PyTorch `DataLoader`.\n",
-    "\n",
-    "It only loads batches into memory and thus allows to work with very large collections."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d705b49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.utils.data import DataLoader, WeightedRandomSampler"
+    "## Create a map-style dataset"
    ]
   },
   {
@@ -112,9 +86,17 @@
    "id": "5e348b32",
    "metadata": {},
    "source": [
-    "Let us create a {class}`~lamindb.dev.MappedCollection` object from {class}`~lamindb.Collection`.\n",
+    "Let us create a [map-style dataset](https://pytorch.org/docs/stable/data) using using {meth}`~lamindb.Collection.mapped`: a {class}`~lamindb.dev.MappedCollection`. This is what, e.g., the with the PyTorch `DataLoader` expects as an input.\n",
     "\n",
-    "Under-the-hood, it performs a virtual inner join of the variables of the underlying `AnnData` objects."
+    "Under-the-hood, it performs a virtual inner join of the features of the underlying `AnnData` objects and thus allows to work with very large collections."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c7f3d06",
+   "metadata": {},
+   "source": [
+    "You can either perform a virutal inner join:"
    ]
   },
   {
@@ -124,25 +106,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_mapped = collection_v2.mapped(label_keys=[\"cell_type\"])"
+    "with collection.mapped(label_keys=[\"cell_type\"], join=\"inner\") as dataset:\n",
+    "    print(len(dataset.var_joint))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "684fdb1c",
+   "id": "982b8f94",
    "metadata": {},
    "source": [
-    "The intersected variable names can be accessed:"
+    "Or a virtual outer join:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "354f955c",
+   "id": "15f6caaa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(ds_mapped.var_joint)"
+    "dataset = collection.mapped(label_keys=[\"cell_type\"], join=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a736b129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(dataset.var_joint)"
    ]
   },
   {
@@ -150,7 +143,7 @@
    "id": "4e46ee80",
    "metadata": {},
    "source": [
-    "This is compatible with pytorch `DataLoader` because it implements `__getitem__` over a list of backed `AnnData` objects."
+    "This is compatible with pytorch `DataLoader` because it implements `__getitem__` over a list of backed `AnnData` objects. This is how you access the 5th cell in the collection:"
    ]
   },
   {
@@ -164,7 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "ds_mapped[5]"
+    "dataset[5]"
    ]
   },
   {
@@ -172,7 +165,7 @@
    "id": "3954ece9",
    "metadata": {},
    "source": [
-    "The `labels` are encoded into integers."
+    "The `labels` are encoded into integers:"
    ]
   },
   {
@@ -186,7 +179,15 @@
    },
    "outputs": [],
    "source": [
-    "ds_mapped.encoders"
+    "dataset.encoders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e4033ed",
+   "metadata": {},
+   "source": [
+    "## Create a pytorch DataLoader"
    ]
   },
   {
@@ -204,11 +205,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torch.utils.data import DataLoader, WeightedRandomSampler\n",
+    "\n",
     "# label_key for weight doesn't have to be in labels on init\n",
     "sampler = WeightedRandomSampler(\n",
-    "    weights=ds_mapped.get_label_weights(\"cell_type\"), num_samples=len(ds_mapped)\n",
+    "    weights=dataset.get_label_weights(\"cell_type\"), num_samples=len(dataset)\n",
     ")\n",
-    "dl = DataLoader(ds_mapped, batch_size=128, sampler=sampler)"
+    "dataloader = DataLoader(dataset, batch_size=128, sampler=sampler)"
    ]
   },
   {
@@ -226,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch in dl:\n",
+    "for batch in dataloader:\n",
     "    pass"
    ]
   },
@@ -235,7 +238,7 @@
    "id": "11ea391d",
    "metadata": {},
    "source": [
-    "Close the connections in `MappedCollection`:"
+    "Close the connections in {class}`~lamindb.dev.MappedCollection`:"
    ]
   },
   {
@@ -245,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_mapped.close()"
+    "dataset.close()"
    ]
   },
   {
@@ -256,12 +259,12 @@
     ":::{dropdown} In practice, use a context manager\n",
     "\n",
     "```\n",
-    "with ds_train.mapped(label_keys=[\"cell_type\"]) as ds_mapped:\n",
+    "with collection.mapped(label_keys=[\"cell_type\"]) as dataset:\n",
     "    sampler = WeightedRandomSampler(\n",
-    "        weights=ds_mapped.get_label_weights(\"cell_type\"), num_samples=len(ds_mapped)\n",
+    "        weights=dataset.get_label_weights(\"cell_type\"), num_samples=len(dataset)\n",
     "    )\n",
-    "    dl = DataLoader(ds_mapped, batch_size=128, sampler=sampler)\n",
-    "    for batch in dl:\n",
+    "    dataloader = DataLoader(dataset, batch_size=128, sampler=sampler)\n",
+    "    for batch in dataloader:\n",
     "        pass\n",
     "```\n",
     ":::"
