--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import pandas as pd"
    ]
@@ -201,7 +202,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt = lb.Gene.bionty()\n",
     "gene_bt.search(\"TP53\").head(3)"
    ]
   },
@@ -479,7 +479,7 @@
     "bionty_source = lb.BiontySource.filter(\n",
     "    source=\"ensembl\", version=\"release-110\", organism=\"human\"\n",
     ").one()\n",
-    "gene_bt = lb.Gene.bionty(bionty_source=bionty_source)\n",
+    "gene_bt = lb.Gene.bionty(bionty_source=bionty_source, organism=\"human\")\n",
     "gene_bt"
    ]
   },
@@ -493,7 +493,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
@@ -530,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
