--- a/docs/protein.ipynb
+++ b/docs/protein.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import pandas as pd"
    ]
@@ -64,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt = lb.Protein.bionty()\n",
+    "protein_bt = lb.Protein.bionty(organism=\"human\")\n",
     "protein_bt"
    ]
   },
@@ -200,7 +201,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt = lb.Protein.bionty()\n",
     "protein_bt.search(\"RAB4A\").head(3)"
    ]
   },
@@ -340,7 +340,7 @@
     "bionty_source = lb.BiontySource.filter(\n",
     "    source=\"uniprot\", version=\"2023-03\", organism=\"human\"\n",
     ").one()\n",
-    "protein_bt = lb.Protein.bionty(bionty_source=bionty_source)\n",
+    "protein_bt = lb.Protein.bionty(bionty_source=bionty_source, organism=\"human\")\n",
     "protein_bt"
    ]
   },
@@ -354,7 +354,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
@@ -387,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
