--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -41,7 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import pandas as pd"
    ]
@@ -479,7 +478,7 @@
     "bionty_source = lb.BiontySource.filter(\n",
     "    source=\"ensembl\", version=\"release-110\", organism=\"human\"\n",
     ").one()\n",
-    "gene_bt = lb.Gene.bionty(bionty_source=bionty_source, organism=\"human\")\n",
+    "gene_bt = lb.Gene.bionty(bionty_source=bionty_source)\n",
     "gene_bt"
    ]
   },
