--- a/docs/protein.ipynb
+++ b/docs/protein.ipynb
@@ -340,7 +340,7 @@
     "bionty_source = lb.BiontySource.filter(\n",
     "    source=\"uniprot\", version=\"2023-03\", organism=\"human\"\n",
     ").one()\n",
-    "protein_bt = lb.Protein.bionty(bionty_source=bionty_source, organism=\"human\")\n",
+    "protein_bt = lb.Protein.bionty(bionty_source=bionty_source)\n",
     "protein_bt"
    ]
   },
