--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are still working with human data, and can globally instruct `bionty` to assume human:"
+    "We are still working with human data, and can globally set an organism:"
    ]
   },
   {
