--- a/docs/protein.ipynb
+++ b/docs/protein.ipynb
@@ -41,10 +41,7 @@
    "outputs": [],
    "source": [
     "import lnschema_bionty as lb\n",
-    "import pandas as pd\n",
-    "\n",
-    "# adds an entry \"human\" into an empty instance\n",
-    "lb.settings.organism = \"human\""
+    "import pandas as pd"
    ]
   },
   {
@@ -67,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt = lb.Protein.bionty()\n",
+    "protein_bt = lb.Protein.bionty(organism=\"human\")\n",
     "protein_bt"
    ]
   },
@@ -203,7 +200,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt = lb.Protein.bionty()\n",
     "protein_bt.search(\"RAB4A\").head(3)"
    ]
   },
@@ -357,7 +353,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.BiontySource.filter(currently_used=True).df()"
@@ -390,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
