--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -86,7 +86,7 @@
    "id": "5e348b32",
    "metadata": {},
    "source": [
-    "Let us create a [map-style dataset](https://pytorch.org/docs/stable/data) using using {meth}`~lamindb.Collection.mapped`: a {class}`~lamindb.dev.MappedCollection`. This is what, e.g., the with the PyTorch `DataLoader` expects as an input.\n",
+    "Let us create a [map-style dataset](https://pytorch.org/docs/stable/data) using using {meth}`~lamindb.Collection.mapped`: a {class}`~lamindb.dev.MappedCollection`. This is what, for example, the PyTorch `DataLoader` expects as an input.\n",
     "\n",
     "Under-the-hood, it performs a virtual inner join of the features of the underlying `AnnData` objects and thus allows to work with very large collections."
    ]
@@ -96,7 +96,7 @@
    "id": "7c7f3d06",
    "metadata": {},
    "source": [
-    "You can either perform a virutal inner join:"
+    "You can either perform a virtual inner join:"
    ]
   },
   {
@@ -143,7 +143,8 @@
    "id": "4e46ee80",
    "metadata": {},
    "source": [
-    "This is compatible with pytorch `DataLoader` because it implements `__getitem__` over a list of backed `AnnData` objects. This is how you access the 5th cell in the collection:"
+    "This is compatible with a PyTorch `DataLoader` because it implements `__getitem__` over a list of backed `AnnData` objects.\n",
+    "The 5th cell in the collection can be accessed like:"
    ]
   },
   {
