--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt = lb.Gene.bionty(organism=\"human\")\n",
+    "gene_bt = lb.Gene.public(organism=\"human\")\n",
     "gene_bt"
    ]
   },
@@ -459,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"Gene\").df()"
+    "lb.PublicSource.filter(entity=\"Gene\").df()"
    ]
   },
   {
@@ -475,10 +475,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"ensembl\", version=\"release-110\", organism=\"human\"\n",
     ").one()\n",
-    "gene_bt = lb.Gene.bionty(bionty_source=bionty_source)\n",
+    "gene_bt = lb.Gene.public(public_source=public_source)\n",
     "gene_bt"
    ]
   },
@@ -499,7 +499,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
