--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -251,13 +251,13 @@
    },
    "outputs": [],
    "source": [
-    "bionty = lb.CellType.bionty()  # access the public ontology through bionty\n",
+    "bionty = lb.CellType.public()  # access the public ontology through bionty\n",
     "name_mapper = {}\n",
     "for name in adata_validated.obs.cell_type.unique():\n",
     "    # search the public ontology and use the ontology id of the top match\n",
     "    ontology_id = bionty.search(name).iloc[0].ontology_id\n",
     "    # create a record by loading the top match from bionty\n",
-    "    record = lb.CellType.from_bionty(ontology_id=ontology_id)\n",
+    "    record = lb.CellType.from_public(ontology_id=ontology_id)\n",
     "    name_mapper[name] = record.name  # map the original name to standardized name\n",
     "    record.save()  # save the record\n",
     "    # add the original name as a synonym, so that next time, we can just run .standardize()\n",
