--- a/docs/protein.ipynb
+++ b/docs/protein.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.BiontySource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt = lb.Protein.bionty(organism=\"human\")\n",
+    "protein_bt = lb.Protein.public(organism=\"human\")\n",
     "protein_bt"
    ]
   },
@@ -320,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(entity=\"Protein\").df()"
+    "lb.PublicSource.filter(entity=\"Protein\").df()"
    ]
   },
   {
@@ -336,10 +336,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bionty_source = lb.BiontySource.filter(\n",
+    "public_source = lb.PublicSource.filter(\n",
     "    source=\"uniprot\", version=\"2023-03\", organism=\"human\"\n",
     ").one()\n",
-    "protein_bt = lb.Protein.bionty(bionty_source=bionty_source)\n",
+    "protein_bt = lb.Protein.public(public_source=public_source)\n",
     "protein_bt"
    ]
   },
@@ -360,7 +360,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.BiontySource.filter(currently_used=True).df()"
+    "lb.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
