--- a/docs/protein.ipynb
+++ b/docs/protein.ipynb
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt = lb.Protein.public(organism=\"human\")\n",
-    "protein_bt"
+    "public = lb.Protein.public(organism=\"human\")\n",
+    "public"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = protein_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `protein_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = protein_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = protein_bt.lookup(protein_bt.gene_symbol)"
+    "lookup = public.lookup(public.gene_symbol)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt.search(\"RAB4A\").head(3)"
+    "public.search(\"RAB4A\").head(3)"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt.search(\"member of RAS oncogene family like 2B\").head(3)"
+    "public.search(\"member of RAS oncogene family like 2B\").head(3)"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt.search(\"RAS\", synonyms_field=None).head(3)"
+    "public.search(\"RAS\", synonyms_field=None).head(3)"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein_bt.search(\"RABL2B\", field=protein_bt.gene_symbol).head()"
+    "public.search(\"RABL2B\", field=public.gene_symbol).head()"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = protein_bt.validate(df_orig.index, protein_bt.uniprotkb_id)\n",
+    "validated = public.validate(df_orig.index, public.uniprotkb_id)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -339,8 +339,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"uniprot\", version=\"2023-03\", organism=\"human\"\n",
     ").one()\n",
-    "protein_bt = lb.Protein.public(public_source=public_source)\n",
-    "protein_bt"
+    "public = lb.Protein.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
