--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.bionty`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
+    "Let us create a public knowledge accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public knowledge source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [Bionty](https://lamin.ai/docs/bionty/bionty.bionty) object, which you can think about as a less-capable registry:"
    ]
   },
   {
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt = lb.Gene.public(organism=\"human\")\n",
-    "gene_bt"
+    "public = lb.Gene.public(organism=\"human\")\n",
+    "public"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = gene_bt.df()\n",
+    "df = public.df()\n",
     "df.head()"
    ]
   },
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `gene_bt.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
    ]
   },
   {
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = gene_bt.lookup()"
+    "lookup = public.lookup()"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = gene_bt.lookup(gene_bt.ncbi_gene_id)"
+    "lookup = public.lookup(public.ncbi_gene_id)"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt.search(\"TP53\").head(3)"
+    "public.search(\"TP53\").head(3)"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt.search(\"PDL1\").head(3)"
+    "public.search(\"PDL1\").head(3)"
    ]
   },
   {
@@ -233,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt.search(\"PDL1\", synonyms_field=None).head(3)"
+    "public.search(\"PDL1\", synonyms_field=None).head(3)"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt.search(\"tumor protein p53\", field=gene_bt.description).head()"
+    "public.search(\"tumor protein p53\", field=public.description).head()"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = gene_bt.validate(df_orig.index, gene_bt.ensembl_gene_id)\n",
+    "validated = public.validate(df_orig.index, public.ensembl_gene_id)\n",
     "df_orig.index[~validated]"
    ]
   },
@@ -317,7 +317,7 @@
    "outputs": [],
    "source": [
     "# based on NCBI gene ID\n",
-    "gene_bt.validate(df_orig[\"ncbi id\"], gene_bt.ncbi_gene_id)"
+    "public.validate(df_orig[\"ncbi id\"], public.ncbi_gene_id)"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "outputs": [],
    "source": [
     "# based on Gene symbols\n",
-    "validated_symbols = gene_bt.validate(df_orig[\"gene symbol\"], gene_bt.symbol)\n",
+    "validated_symbols = public.validate(df_orig[\"gene symbol\"], public.symbol)\n",
     "df_orig[\"gene symbol\"][~validated_symbols]"
    ]
   },
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt.inspect(df_orig[\"gene symbol\"], gene_bt.symbol);"
+    "public.inspect(df_orig[\"gene symbol\"], public.symbol);"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapped_symbol_synonyms = gene_bt.standardize(df_orig[\"gene symbol\"])\n",
+    "mapped_symbol_synonyms = public.standardize(df_orig[\"gene symbol\"])\n",
     "mapped_symbol_synonyms"
    ]
   },
@@ -377,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt.standardize(df_orig[\"gene symbol\"], return_mapper=True)"
+    "public.standardize(df_orig[\"gene symbol\"], return_mapper=True)"
    ]
   },
   {
@@ -411,10 +411,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt.standardize(\n",
+    "public.standardize(\n",
     "    df_curated.index,\n",
-    "    field=gene_bt.symbol,\n",
-    "    return_field=gene_bt.ensembl_gene_id,\n",
+    "    field=public.symbol,\n",
+    "    return_field=public.ensembl_gene_id,\n",
     ")"
    ]
   },
@@ -431,10 +431,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_bt.standardize(\n",
+    "public.standardize(\n",
     "    df_curated.index,\n",
-    "    field=gene_bt.symbol,\n",
-    "    return_field=gene_bt.ensembl_gene_id,\n",
+    "    field=public.symbol,\n",
+    "    return_field=public.ensembl_gene_id,\n",
     "    return_mapper=True,\n",
     ")"
    ]
@@ -478,8 +478,8 @@
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"ensembl\", version=\"release-110\", organism=\"human\"\n",
     ").one()\n",
-    "gene_bt = lb.Gene.public(public_source=public_source)\n",
-    "gene_bt"
+    "public = lb.Gene.public(public_source=public_source)\n",
+    "public"
    ]
   },
   {
