--- a/docs/protein.ipynb
+++ b/docs/protein.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "932e44c5",
    "metadata": {},
    "source": [
     "# Protein"
@@ -9,17 +10,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2d38fef",
    "metadata": {},
    "source": [
     "lamindb provides access to the following public protein ontologies through [lnschema-bionty](https://github.com/laminlabs/lnschema-bionty):\n",
     "\n",
     "1. [Uniprot](https://www.uniprot.org/)\n",
     "\n",
-    "Here we show how to access and search protein ontologies to standardize new data."
+    "Here we show how to access and search Protein ontologies to standardize new data."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8d13b4a1",
    "metadata": {},
    "source": [
     "## Setup"
@@ -28,6 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e71ce8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8f88747c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +51,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c663f697",
    "metadata": {},
    "source": [
     "## PublicOntology objects"
@@ -53,23 +59,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea8502cc",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`.\n",
+    "It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5801a056",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public = lb.Protein.public(organism=\"human\")\n",
-    "public"
+    "proteins = lb.Protein.public(organism=\"human\")\n",
+    "proteins"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "5aa93cf4",
    "metadata": {},
    "source": [
     "As for registries, you can export the ontology as a `DataFrame`:"
@@ -78,15 +88,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1b421913",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = public.df()\n",
+    "df = proteins.df()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "ec222ad1",
    "metadata": {},
    "source": [
     "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
@@ -94,6 +106,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3f598cc",
    "metadata": {},
    "source": [
     "## Look up terms"
@@ -101,6 +114,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "364b5c10",
    "metadata": {},
    "source": [
     "As for registries, terms can be looked up with auto-complete:"
@@ -109,14 +123,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dc6dc440",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup()"
+    "lookup = proteins.lookup()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d7e625ea",
    "metadata": {},
    "source": [
     "The `.` accessor provides normalized terms (lower case, only contains alphanumeric characters and underscores):"
@@ -125,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "34e4b3b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +150,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b1967f9",
    "metadata": {},
    "source": [
     "To look up the exact original strings, convert the lookup object to dict and use the `[]` accessor:"
@@ -141,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe0d773b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,6 +169,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6806a590",
    "metadata": {},
    "source": [
     "By default, the `name` field is used to generate lookup keys. You can specify another field to look up:"
@@ -158,22 +178,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0fdcfd41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lookup = public.lookup(public.gene_symbol)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If multiple entries are matched, they are returned as a list:"
+    "lookup = proteins.lookup(proteins.gene_symbol)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "89a251c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +197,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f72389a",
    "metadata": {},
    "source": [
     "## Search terms"
@@ -189,6 +205,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26057abd",
    "metadata": {},
    "source": [
     "Search behaves in the same way as it does for registries:"
@@ -197,14 +214,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bdb910fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"RAB4A\").head(3)"
+    "proteins.search(\"RAS\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d999ebbb",
    "metadata": {},
    "source": [
     "By default, search also covers synonyms:"
@@ -213,14 +232,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7672bb44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"member of RAS oncogene family like 2B\").head(3)"
+    "proteins.search(\"member of RAS oncogene family like 2B\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "244fb8c3",
    "metadata": {},
    "source": [
     "You can turn this off synonym by passing `synonyms_field=None`:"
@@ -229,14 +250,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "113c5f89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"RAS\", synonyms_field=None).head(3)"
+    "proteins.search(\"member of RAS oncogene family like 2B\", synonyms_field=None).head(3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "75f138e1",
    "metadata": {},
    "source": [
     "Search another field (default is `.name`):"
@@ -245,38 +268,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e41e6619",
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"RABL2B\", field=public.gene_symbol).head()"
+    "proteins.search(\n",
+    "    \"RABL2B\",\n",
+    "    field=proteins.definition,\n",
+    ").head()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "bef1f9e0",
    "metadata": {},
    "source": [
-    "## Standardize protein identifiers"
+    "## Standardize Protein identifiers"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "4e764d59",
    "metadata": {},
    "source": [
-    "Let us generate a `DataFrame` that stores a number of protein identifiers, some of which corrupted:"
+    "Let us generate a `DataFrame` that stores a number of Protein identifiers, some of which corrupted:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e2c9bbab",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_orig = pd.DataFrame(\n",
     "    index=[\n",
-    "        \"A0A024QZ08\",\n",
-    "        \"X6RLV5\",\n",
-    "        \"X6RM24\",\n",
-    "        \"A0A024QZQ1\",\n",
+    "        \"A0A024QZ08\"\n",
+    "        \"X6RLV5\"\n",
+    "        \"X6RM24\"\n",
+    "        \"A0A024QZQ1\"\n",
     "        \"This protein does not exist\",\n",
     "    ]\n",
     ")\n",
@@ -285,6 +315,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75cd5a8c",
    "metadata": {},
    "source": [
     "We can check whether any of our values are validated against the ontology reference:"
@@ -293,15 +324,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bfb15321",
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = public.validate(df_orig.index, public.uniprotkb_id)\n",
+    "validated = proteins.validate(df_orig.index, proteins.name)\n",
     "df_orig.index[~validated]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a2fca412",
    "metadata": {},
    "source": [
     "## Ontology source versions"
@@ -309,6 +342,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13e2e216",
    "metadata": {},
    "source": [
     "For any given entity, we can choose from a number of versions:"
@@ -317,6 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "51f28ce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +360,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66c4b0fa",
    "metadata": {},
    "source": [
     "When instantiating a Bionty object, we can choose a source or version:"
@@ -333,18 +369,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "b9e2be34",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "public_source = lb.PublicSource.filter(\n",
     "    source=\"uniprot\", version=\"2023-03\", organism=\"human\"\n",
     ").one()\n",
-    "public = lb.Protein.public(public_source=public_source)\n",
-    "public"
+    "proteins= lb.Protein.public(public_source=public_source)\n",
+    "proteins"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d55a527a",
    "metadata": {},
    "source": [
     "The currently used ontologies can be displayed using:"
@@ -353,6 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33e51a52",
    "metadata": {
     "tags": [
      "hide-output"
@@ -366,7 +407,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "c1e6ba62",
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "!lamin delete --force test-protein\n",
@@ -379,20 +425,8 @@
    "display_name": "lamindb",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
