--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import pandas as pd"
    ]
   },
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~docs:lnschema_bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:lnschema_bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/lnschema_bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~docs:bionty.dev.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public = lb.Gene.public(organism=\"human\")\n",
+    "public = bt.Gene.public(organism=\"human\")\n",
     "public"
    ]
   },
@@ -459,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.PublicSource.filter(entity=\"Gene\").df()"
+    "bt.PublicSource.filter(entity=\"Gene\").df()"
    ]
   },
   {
@@ -475,10 +475,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public_source = lb.PublicSource.filter(\n",
+    "public_source = bt.PublicSource.filter(\n",
     "    source=\"ensembl\", version=\"release-110\", organism=\"human\"\n",
     ").one()\n",
-    "public = lb.Gene.public(public_source=public_source)\n",
+    "public = bt.Gene.public(public_source=public_source)\n",
     "public"
    ]
   },
@@ -499,7 +499,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.PublicSource.filter(currently_used=True).df()"
+    "bt.PublicSource.filter(currently_used=True).df()"
    ]
   },
   {
