--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
     "ln.track()"
@@ -97,7 +97,7 @@
    "source": [
     "Let us look at the standardized data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197), available from [CZ CELLxGENE](https://cellxgene.cziscience.com/).\n",
     "\n",
-    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of the [collection from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~lnschema_bionty.Gene`, {class}`~lnschema_bionty.CellType`, {class}`~lnschema_bionty.CellLine`, {class}`~lnschema_bionty.ExperimentalFactor`."
+    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of the [collection from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~bionty.Gene`, {class}`~bionty.CellType`, {class}`~bionty.CellLine`, {class}`~bionty.ExperimentalFactor`."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` object is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) with the same public ontologies that underlie {mod}`lnschema_bionty`. Because registries are pre-populated, validation passes.\n",
+    "This `AnnData` object is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) with the same public ontologies that underlie {py:mod}`bionty`. Because registries are pre-populated, validation passes.\n",
     "\n",
     "```{note}\n",
     "\n",
@@ -144,7 +144,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.Gene.df()"
+    "bt.Gene.df()"
    ]
   },
   {
@@ -166,10 +166,10 @@
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
-    "    field=lb.Gene.ensembl_gene_id,  # field to validate and link features\n",
+    "    field=bt.Gene.ensembl_gene_id,  # field to validate and link features\n",
     "    key=\"scrna/conde22.h5ad\",  # optional: a relative path in your default storage\n",
     "    description=\"Human immune cells from Conde22\",  # optional: a description\n",
-    "    organism=\"human\",  # or set globally: lb.settings.organism = \"human\"\n",
+    "    organism=\"human\",  # or set globally: bt.settings.organism = \"human\"\n",
     ")\n",
     "artifact"
    ]
@@ -224,8 +224,8 @@
    },
    "outputs": [],
    "source": [
-    "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "organism = lb.Organism.lookup()\n",
+    "experimental_factors = bt.ExperimentalFactor.lookup()\n",
+    "organism = bt.Organism.lookup()\n",
     "features = ln.Feature.lookup()\n",
     "\n",
     "artifact.labels.add(organism.human, feature=features.organism)\n",
