--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -32,10 +32,10 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
-    "lb.settings.auto_save_parents = False\n",
+    "bt.settings.auto_save_parents = False\n",
     "ln.track()"
    ]
   },
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.settings.organism = \"human\""
+    "bt.settings.organism = \"human\""
    ]
   },
   {
@@ -127,7 +127,7 @@
    },
    "outputs": [],
    "source": [
-    "lb.Gene.inspect(adata.var.index, lb.Gene.symbol)"
+    "bt.Gene.inspect(adata.var.index, bt.Gene.symbol)"
    ]
   },
   {
@@ -143,8 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.var.index = lb.Gene.standardize(adata.var.index, lb.Gene.symbol)\n",
-    "validated = lb.Gene.validate(adata.var.index, lb.Gene.symbol)"
+    "adata.var.index = bt.Gene.standardize(adata.var.index, bt.Gene.symbol)\n",
+    "validated = bt.Gene.validate(adata.var.index, bt.Gene.symbol)"
    ]
   },
   {
@@ -180,10 +180,10 @@
    },
    "outputs": [],
    "source": [
-    "adata_validated.var[\"ensembl_gene_id\"] = lb.Gene.standardize(\n",
+    "adata_validated.var[\"ensembl_gene_id\"] = bt.Gene.standardize(\n",
     "    adata_validated.var.index,\n",
-    "    field=lb.Gene.symbol,\n",
-    "    return_field=lb.Gene.ensembl_gene_id,\n",
+    "    field=bt.Gene.symbol,\n",
+    "    return_field=bt.Gene.ensembl_gene_id,\n",
     ")\n",
     "adata_validated.var.index.name = \"symbol\"\n",
     "adata_validated.var = adata_validated.var.reset_index().set_index(\"ensembl_gene_id\")\n",
@@ -231,7 +231,7 @@
    },
    "outputs": [],
    "source": [
-    "inspector = lb.CellType.inspect(adata_validated.obs.cell_type)"
+    "inspector = bt.CellType.inspect(adata_validated.obs.cell_type)"
    ]
   },
   {
@@ -251,13 +251,13 @@
    },
    "outputs": [],
    "source": [
-    "bionty = lb.CellType.public()  # access the public ontology through bionty\n",
+    "bionty = bt.CellType.public()  # access the public ontology through bionty\n",
     "name_mapper = {}\n",
     "for name in adata_validated.obs.cell_type.unique():\n",
     "    # search the public ontology and use the ontology id of the top match\n",
     "    ontology_id = bionty.search(name).iloc[0].ontology_id\n",
     "    # create a record by loading the top match from bionty\n",
-    "    record = lb.CellType.from_public(ontology_id=ontology_id)\n",
+    "    record = bt.CellType.from_public(ontology_id=ontology_id)\n",
     "    name_mapper[name] = record.name  # map the original name to standardized name\n",
     "    record.save()  # save the record\n",
     "    # add the original name as a synonym, so that next time, we can just run .standardize()\n",
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.CellType.validate(adata_validated.obs.cell_type)\n",
+    "validated = bt.CellType.validate(adata_validated.obs.cell_type)\n",
     "assert all(validated)"
    ]
   },
@@ -327,8 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "organism = lb.Organism.lookup()\n",
+    "experimental_factors = bt.ExperimentalFactor.lookup()\n",
+    "organism = bt.Organism.lookup()\n",
     "features = ln.Feature.lookup()"
    ]
   },
@@ -345,7 +345,7 @@
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata_validated,\n",
     "    description=\"10x reference adata\",\n",
-    "    field=lb.Gene.ensembl_gene_id,\n",
+    "    field=bt.Gene.ensembl_gene_id,\n",
     ")"
    ]
   },
