--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import anndata as ad"
    ]
   },
@@ -101,9 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assays = lb.ExperimentalFactor.lookup()\n",
-    "organism = lb.Organism.lookup()\n",
-    "cell_types = lb.CellType.lookup()"
+    "assays = bt.ExperimentalFactor.lookup()\n",
+    "organism = bt.Organism.lookup()\n",
+    "cell_types = bt.CellType.lookup()"
    ]
   },
   {
