--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
+    "import bionty as bt\n",
     "import anndata as ad"
    ]
   },
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes = lb.Gene.lookup(field=\"symbol\")"
+    "genes = bt.Gene.lookup(field=\"symbol\")"
    ]
   },
   {
