🔥 Remove setup for public ontologies

--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin init --storage ./test-gene --schema bionty"
+    "!lamin init --storage ./test-public-ontologies --schema bionty"
    ]
   },
   {
