--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lamindb provides access to the following public gene ontologies through [lnschema-bionty](https://github.com/laminlabs/lnschema-bionty):\n",
+    "lamindb provides access to the following public gene ontologies through [bionty](https://lamin.ai/docs/bionty):\n",
     "\n",
     "1. [Ensembl](https://ensembl.org)\n",
     "2. [NCBI Gene](https://www.ncbi.nlm.nih.gov/gene)\n",
