🔥 Remove setup for public ontologies (#103)

--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lamindb provides access to the following public gene ontologies through [lnschema-bionty](https://github.com/laminlabs/lnschema-bionty):\n",
+    "lamindb provides access to the following public gene ontologies through [bionty](https://lamin.ai/docs/bionty):\n",
     "\n",
     "1. [Ensembl](https://ensembl.org)\n",
     "2. [NCBI Gene](https://www.ncbi.nlm.nih.gov/gene)\n",
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin init --storage ./test-gene --schema bionty"
+    "!lamin init --storage ./test-public-ontologies --schema bionty"
    ]
   },
   {
@@ -500,20 +500,6 @@
    "outputs": [],
    "source": [
     "bt.PublicSource.filter(currently_used=True).df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "!lamin delete --force test-gene\n",
-    "!rm -r test-gene"
    ]
   }
  ],
