Simplify some text
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -259,8 +259,7 @@
     "    # create a record by loading the top match from bionty\n",
     "    record = bt.CellType.from_public(ontology_id=ontology_id)\n",
     "    name_mapper[name] = record.name  # map the original name to standardized name\n",
-    "    record.save()  # save the record\n",
-    "    # add the original name as a synonym, so that next time, we can just run .standardize()\n",
+    "    record.save()\n",
     "    record.add_synonym(name)"
    ]
   },
