--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -19,12 +19,9 @@
    "metadata": {},
    "source": [
     "In the previous notebooks, we've seen how to incrementally create a collection and train models on it.\n",
-    "\n",
     "Once we have a collection of validated array shards, we might want to concatenate them to one big array store.\n",
-    "\n",
     "This is what the CELLxGENE team does to create Census: a high number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store.\n",
-    "\n",
-    "This requires duplicating the data that's present in a collection of `.h5ad` files, but speeds up ad-hoc queries for slices for arbitrary metadata.\n",
+    "A requirement is duplicating the data that's present in a collection of `.h5ad` files, but doing so speeds up ad-hoc queries for slices for arbitrary metadata.\n",
     "\n",
     "See how this looks for `cellxgene` here: {doc}`docs:cellxgene`."
    ]
